更改编译后的文件夹名称

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>趣家全屋漫游-热点编辑</title>
-    <script src="./static/viewer/krpano.js"></script>
+    <script src="<%=htmlWebpackPlugin.options.krpano%>"></script>
 </head>
 
 <body>
